welcome.lessons.welcome.bat.bool2.FizzBuzz.scala.error
fizzBuzz:11: error: not enough arguments for method fizzBuzz: (a: Int)String.
Unspecified value parameter a.
return fizzBuzz()
               ^